Mark up the email addresses.

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,8 +2,8 @@
   <div class="span8">
 
     <h3>Contact</h3>
-    <p>We would love to hear from you. If you have any questions please contact us at info@brightonbelles.com </p>
-	<p>For any queries on orders you have placed email us at orders@brightonbelles.com</p>
+    <p>We would love to hear from you. If you have any questions please contact us at <%= link_to 'info@brightonbelles.com', 'mailto:info@brightonbelles.com' %></p>
+	<p>For any queries on orders you have placed email us at <%= link_to 'orders@brightonbelles.com', 'mailto:orders@brightonbelles.com' %></p>
 
   </div>
 
