--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="narrow-image">
-  <p>Welcome to our shop</p>
+  <p>Welcome to our shop!</p>
   <%= link_to(@carousel_products[0], { 'class' => 'thumbnail' }) do %>
     <% image_tag 'widepurse01.jpg', :alt => 'Butterfly Handbag' %>
   <% end %>
