Finish off buying page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
                 <li><%= link_to 'Contact', '/pages/contact' %></li>
                 <!-- <li><%= link_to 'Gallery', '/pages/gallery' %></li>
                 <li><%= link_to 'Commissions', '/pages/commissions' %></li> -->
+                <li><%= link_to 'Buying & Delivery', '/pages/buying' %></li>
                 <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Our Etsy Shop</b></a></li>
               </ul>
 
@@ -86,7 +87,7 @@
       <p class="pull-right">
         <%= link_to 'About', '/pages/about' %> |
         <%= link_to 'Contact', '/pages/contact' %> |
-        <%= link_to 'Buying and Delivery', 'http://www.etsy.com/shop/BrightonBelleGifts/policy' %>
+        <%= link_to 'Buying & Delivery', '/pages/buying' %>
       </p>
     </div>
   </footer>
