--- a/app/views/pages/buying.html.erb
+++ b/app/views/pages/buying.html.erb
@@ -1,30 +1,25 @@
 <div class="row">
+
   <div class="span8">
-  
-  <h3>Buying Our Products on Etsy</h3>
+    <h3>Buying Our Products on Etsy</h3>
+    <p> We sell our lovingly handmade products through the online marketplace at etsy.com.</p>
+    <p>Clicking the "Buy Now on etsy.com" button will take you directly to the product you are interested in on the Etsy website.</p>
 
-
-<p> We sell our lovingly handmade products through the online marketplace at etsy.com.<p>
-
-<p>Clicking the "Buy Now on etsy.com" button will take you directly to the product you are interested in on the Etsy website.<p>
-
- <div class="buy_button">
-        <p><%= link_to('Buy Now on etsy.com', 'http://www.etsy.com/shop/BrightonBelleGifts', { :class => 'btn btn-large btn-primary', :target => '_blank' }) %></p>
-      </div>
-
-  
+    <p>Our terms and conditions and delivery information are available on <%= link_to 'our Etsy Shop', 'http://www.etsy.com/shop/BrightonBelleGifts/policy', { :target => '_blank' } %></p>
+        
+    <div class="buy_button">
+      <p><%= link_to('Buy Now on etsy.com', 'http://www.etsy.com/shop/BrightonBelleGifts', { :class => 'btn btn-large btn-primary', :target => '_blank' }) %></p>
+    </div>
   </div>
- 
-  <div class="span4">
   
-<ul class="thumbnails">
+  <div class="span4">
+    <ul class="thumbnails">
       <li>
         <%= link_to product_ranges_url, :class => 'thumbnail' do %>
         <% image_tag 'pinkeiffel001.jpg', :alt => 'Butterfly Bag', :size => '360x254' %>
         <% end %>
       </li>
     </ul>
-    
-    </div>
-    
-    </div>
+  </div>
+
+</div>
