Add product carousel details.

--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
 <% else %>
-  <p>We couldn't find any products matching your search. How about one of these...</p>
+  <p>We're sorry, we couldn't find any products matching your search. How about one of these?</p>
   <p>&nbsp;</p>
 
   <div class="row">
