Move "all products" to /products.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -33,7 +33,7 @@
 
     <ul class="thumbnails">
       <li>
-        <%= link_to product_ranges_url, :class => 'thumbnail' do %>
+        <%= link_to products_url, :class => 'thumbnail' do %>
         <% image_tag '2butterflybag.jpg', :alt => 'Butterfly Bag', :size => '360x254' %>
         <% end %>
       </li>
