--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -11,7 +11,7 @@
 
     <ul class="thumbnails">
       <li>
-        <%= link_to product_ranges_url, :class => 'thumbnail' do %>
+        <%= link_to products_url, :class => 'thumbnail' do %>
         <% image_tag 'butterflypurse002.jpg', :alt => 'Butterfly Bag', :size => '360x254' %>
         <% end %>
       </li>
