--- a/app/views/product_ranges/show.html.erb
+++ b/app/views/product_ranges/show.html.erb
@@ -6,7 +6,7 @@
         <%= link_to 'Home', :root %> <span class="divider">/</span>
       </li>
       <li>
-        <%= link_to 'Products', product_ranges_path %> <span class="divider">/</span>
+        <%= link_to 'Products', products_path %> <span class="divider">/</span>
       </li>
       <li class="active">
         <%= @range.name %>
