--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                       <li><%= link_to range.name, range %></li>
                     <% end %>
                     <li class="divider"></li>
-                    <li><%= link_to 'All Products', product_ranges_path %></li>
+                    <li><%= link_to 'All Products', products_path %></li>
                   </ul>
                 </li>
                 <li class="dropdown">
