--- a/app/views/pages/buying.html.erb
+++ b/app/views/pages/buying.html.erb
@@ -15,7 +15,7 @@
   <div class="span4">
     <ul class="thumbnails">
       <li>
-        <%= link_to product_ranges_url, :class => 'thumbnail' do %>
+        <%= link_to products_url, :class => 'thumbnail' do %>
         <% image_tag 'pinkeiffel001.jpg', :alt => 'Butterfly Bag', :size => '360x254' %>
         <% end %>
       </li>
