--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,7 +23,7 @@
 // @linkColor: #ff0000;
 
 @linkColor: #a7c4bb;
-
+@baseFontFamily: 'Lusitana', serif;
 @navbarBackground: @linkColor;
 @navbarBackgroundHighlight: @linkColor;
 @navbarText: #fff;
@@ -36,5 +36,10 @@
 
 .page_heading {
     color: @linkColor;
+}
+
+h1 {
+	font-family: 'Lusitana', serif;
+
 }
 
