--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -7,7 +7,8 @@
 }
 
 #butterfly-handbag-hero {
-    background: url('/assets/widepurse01.jpg');
+    background: url('/assets/frontipad5.jpg');
+    color: #DF4225;
 }
 
 #tweed-handbag-hero {
@@ -32,7 +33,7 @@
 }
 
 #home-carousel {
-    padding: 10px;
+    padding: 0px;
     background-color: #d4eeed;
     
     .carousel-caption {
@@ -41,6 +42,13 @@
 
     .carousel-image {
         height: 243px;
-        width: 650px;
+        width: 670px;
     }
+}
+
+#sign_up {
+		font-family: Georgia, cursive;
+		
+
+
 }
