--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 </div>
 -->
 
-<div class="row">
+<!--<div class="row">
   <div class="span5">
     <div class="hero-unit" id="shop-now-hero">
       <h1>Online Store</h1>
@@ -24,13 +24,13 @@
         </a>
       </p>
     </div>
-  </div>
-  <div class="span7">
+  </div>-->
+ <!-- <div class="span7">
     <div id="home-carousel" class="hero-unit carousel slide">
       <div class="carousel-inner">
         <div class="active item">
           <%= link_to @carousel_products[0] do %>
-            <% image_tag 'widepurse01.jpg', :alt => 'Butterfly Handbag', :class => 'carousel-image' %>
+            <% image_tag 'frontpagebags.jpg', :alt => 'Butterfly Handbag', :class => 'carousel-image' %>
           <% end %>
           <div class="carousel-caption">
             <h4>Our Amazing Butterfly Handbag!</h4>
@@ -39,7 +39,7 @@
         </div>
         <div class="item">
           <%= link_to @carousel_products[1] do %>
-            <% image_tag 'frontcushions.jpg', :alt => 'Cushions', :class => 'carousel-image' %>
+            <% image_tag 'frontcushionstack.jpg', :alt => 'Cushions', :class => 'carousel-image' %>
           <% end %>
           <div class="carousel-caption">
             <h4>A Selection Of Our Scatter Cushions</h4>
@@ -48,7 +48,7 @@
         </div>
         <div class="item">
           <%= link_to @carousel_products[2] do %>
-            <% image_tag 'fronttweed.jpg', :alt => 'Tweed Handbag', :class => 'carousel-image' %>
+            <% image_tag 'frontpagetweed.jpg', :alt => 'Tweed Handbag', :class => 'carousel-image' %>
           <% end %>
           <div class="carousel-caption">
             <h4>Our Gorgeous Raspberry Tweed Handbag</h4>
@@ -60,33 +60,35 @@
       <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div>
   </div>
-</div>
+</div>-->
 <div class="row">
   <div class="span9">
     <div class="hero-unit" id="butterfly-handbag-hero">
-      <h1>Butterfly Bag!</h1>
-      <p>Carry your belongings in style</p>
-      <p>
+      <h1>Online Store</h1>
+      <h2>Carry your belongings in style</h2>
         <a href="/products/6" class="btn btn-primary btn-large">
-          Now Available
+         Shop Now!
         </a>
       </p>
     </div>
   </div>
-  <div class="span3">
+</div>
+
+<div class="row">
+  <div class="span3 offset9">
     <form class="well">
-      <p>Join our mailing list to hear about new products first!</p>
+      <p>Join our mailing list to hear about new products and special offers!</p>
       <input type="text" placeholder="Enter your email address">
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
   </div>
 </div>
 
-<div id="social">
+<!--<div id="social">
   <div id="facebook" data-likeurl="http://www.brightonbelles.com">
     <a href="http://www.facebook.com/BrightonBelles">facebook.com/BrightonBelles</a>
   </div>
   <a href="http://twitter.com/BellesBulletin" class="twitter-follow-button twitter-widget"
      data-width="160px" data-show-count="false">Follow @BellesBulletin</a>
   <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&amp;media=<%= u asset_url('triplecushionstackbackroung.jpg') %>&amp;description=Brighton%20Belles%20-%20Pretty%20Things!" class="pin-it-button" data-count-layout="horizontal">Pin It</a>
-</div>
+</div>-->
