--- a/app/assets/stylesheets/header.css.less
+++ b/app/assets/stylesheets/header.css.less
@@ -10,6 +10,13 @@
     #headerimage {
         width: 1170px;    
         background-image: url(/assets/pier1170.jpg);
+        
+        h1 {
+        	font-size: 42px;
+        	color: #DF4225;
+        	padding-top: 40px;
+        	padding-left: 40px;
+        }
     }
 }
 
@@ -25,4 +32,10 @@
         width: 724px;
         background-image: url(/assets/pier724.jpg);
     }
+}
+
+h1 {
+	font-family: 'Lusitana', serif;
+
+
 }
