--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,7 @@
   <div class="span3 offset9">
     <form class="well">
       <p>Join our mailing list to hear about new products and special offers!</p>
-      <input type="text" placeholder="Enter your email address">
+      <input type="text" id="signup-email" placeholder="Enter your email address">
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
   </div>
