--- a/app/assets/stylesheets/header.css.less
+++ b/app/assets/stylesheets/header.css.less
@@ -3,7 +3,11 @@
     margin-top: 2px;
     margin-bottom: 2px;
     background-image: url(/assets/pier940.jpg);
-    
+
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+
     h1 {
 	font-family: 'Lusitana', serif;
         color: #DF4225;
