Work in progress. (cherry picked from commit 394dbfd0ffdac230484295e0313389dfabe8ef69)

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,7 +23,8 @@
 // @linkColor: #ff0000;
 
 @linkColor: #a7c4bb;
-@baseFontFamily: 'Lusitana', serif;
+//@bodyBackground: #d4eeed;
+@baseFontFamily: 'HelveticaNeue-light', sans serif;
 @navbarBackground: @linkColor;
 @navbarBackgroundHighlight: @linkColor;
 @navbarText: #fff;
@@ -42,4 +43,9 @@ h1 {
 	font-family: 'Lusitana', serif;
 
 }
+
+//.backgroundpatterns { 
+//		background: url('/assets/bigcanvasbackground2.jpg');
+//
+//}
 
