--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -7,7 +7,11 @@
 }
 
 #butterfly-handbag-hero {
-    background: url('/assets/frontipad5.jpg');
+    background: url('/assets/ipadcase2thumb.jpg');
+    background-repeat: no-repeat;
+    background-color: #d4eeed;
+    background-position: right; 
+    
     color: #DF4225;
 }
 
@@ -46,6 +50,14 @@
     }
 }
 
-input#signup-email {
-    width: 100%
+#sign_up {
+		font-family: Georgia, cursive;
+	
+		
 }
+
+body { 
+		background: url('/assets/buttonbackground.jpg');
+		background-repeat: repeat;
+}
+
