--- a/app/assets/stylesheets/thumbnails.css.less
+++ b/app/assets/stylesheets/thumbnails.css.less
@@ -11,9 +11,9 @@
 
 a.thumbnail {
     border-width: 6px;
-    border-color: #ED9136;
+   
 }
 
-a.thumbnail:hover {
+a.thumbnail:hover {  border-color: #ED9136;
 	
 }
