--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,11 +61,18 @@
     </div>
   </div>
 </div>-->
+
+<div>
+	
+<!--	<body background="/assets/canvasbackground.jpg" id="background" class="backgroundpatterns"> -->
+	
+	</div>
+
 <div class="row">
   <div class="span9">
     <div class="hero-unit" id="butterfly-handbag-hero">
       <h1>Online Store</h1>
-      <h2>Carry your belongings in style</h2>
+      <h3>Carry your belongings in style</h3>
         <a href="/products/6" class="btn btn-primary btn-large">
          Shop Now!
         </a>
