--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,12 +23,14 @@
 // @linkColor: #ff0000;
 
 @linkColor: #a7c4bb;
-//@bodyBackground: #d4eeed;
-@baseFontFamily: 'HelveticaNeue-light', sans serif;
+@bodyBackground: #FDFFE6;
+@baseFontFamily: 'Nixie One', cursive;
+@headingsFontWeight: bold;
 @navbarBackground: @linkColor;
 @navbarBackgroundHighlight: @linkColor;
 @navbarText: #fff;
 @navbarLinkColor: #fff;
+
 
 .navbar-search .search-query {
     width: 180px;
@@ -40,7 +42,7 @@
 }
 
 h1 {
-	font-family: 'Lusitana', serif;
+	font-family: 'Nixie One', cursive;
 
 }
 
