--- a/app/assets/stylesheets/header.css.less
+++ b/app/assets/stylesheets/header.css.less
@@ -9,9 +9,9 @@
     -moz-border-radius: 4px;
 
     h1 {
-	font-family: 'Lusitana', serif;
-        color: #DF4225;
-        font-size: 44px;
+	font-family: 'Italianno', cursive;
+        color: #688F8E;
+        font-size: 60px;
         padding-top: 30px;
         padding-left: 50px;
     }
