--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -11,8 +11,8 @@
     background-repeat: no-repeat;
     background-color: #d4eeed;
     background-position: right; 
-    
-    color: #DF4225;
+    font-family: 'Nixie One', cursive;
+    color: #3A4E4E;
 }
 
 #tweed-handbag-hero {
@@ -56,8 +56,21 @@
 		
 }
 
-body { 
-		background: url('/assets/buttonbackground.jpg');
-		background-repeat: repeat;
-}
+#front-page-thumb1 {
+		background-color: #d4eeed;
+		
 
+
+}
+#front-page-thumb2 {
+		background-color: #d4eeed;
+		
+
+
+}
+#front-page-thumb3 {
+		background-color: #d4eeed;
+		
+
+
+}
