--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <% else %>
     <title>Brighton Belles - Cushions, Bags, Purses and Gadget Cases</title>
   <% end %>
-<link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC|Ribeye|Cantata+One|Fredericka+the+Great|Federo|Londrina+Sketch|Oleo+Script|Concert+One|Emblema+One|Josefin+Sans|Limelight|Smythe|Antic+Didone|Londrina+Outline|Josefin+Slab:700|Fredoka+One|EB+Garamond|Loved+by+the+King|Voltaire|Italiana|Kranky|Amatic+SC:400,700|IM+Fell+Great+Primer+SC|Diplomata|Miltonian|Miltonian+Tattoo|Special+Elite|Ewert|Ribeye+Marrow|Belleza|Fanwood+Text|Cutive|Lusitana|Ledger|Pontano+Sans|Marko+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Nixie+One|Bad+Script|Vast+Shadow|Josefin+Slab|Italianno|Montserrat|Mountains+of+Christmas:700' rel='stylesheet' type='text/css'>
 
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -88,6 +88,8 @@
           </div>
         </div>
       </div>
+      
+      
 
       <%= yield %>
 
