--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -1,76 +1,34 @@
 .wrapper {
-    //background: url('/assets/butterflyscan.jpg');
-    
     .container.outer {
         background: #fff;
     }
 }
 
 #butterfly-handbag-hero {
-    background: url('/assets/ipadcase2thumb.jpg');
+    background: url('/assets/ipadcase2thumb.png');
     background-repeat: no-repeat;
     background-color: #d4eeed;
     background-position: right; 
-    font-family: 'Nixie One', cursive;
     color: #3A4E4E;
-}
 
-#tweed-handbag-hero {
-    background: url('/assets/fronttweed.jpg');
-}
-
-#cushions-hero {
-    background: url('/assets/butterflyscan.jpg');
-    /* background: url('/assets/frontcushions.jpg'); */
-
-    p {
-        text-shadow:
-        -1px -1px 0 #fff,
-        1px -1px 0 #fff,
-        -1px 1px 0 #fff,
-        1px 1px 0 #fff;  
-    }
-}
-
-#shop-now-hero {
-    background-color: #d4eeed;
-}
-
-#home-carousel {
-    padding: 0px;
-    background-color: #d4eeed;
-    
-    .carousel-caption {
-        display: none;
+    h1 {
+        font-family: 'Nixie One', cursive;
+        padding-bottom: 6px;
     }
 
-    .carousel-image {
-        height: 243px;
-        width: 670px;
+    h3 {
+        padding-bottom: 6px;
     }
-}
-
-#sign_up {
-		font-family: Georgia, cursive;
-	
-		
 }
 
 #front-page-thumb1 {
-		background-color: #d4eeed;
-		
-
-
+    background-color: #d4eeed;
 }
+
 #front-page-thumb2 {
-		background-color: #d4eeed;
-		
-
-
+    background-color: #d4eeed;
 }
+
 #front-page-thumb3 {
-		background-color: #d4eeed;
-		
-
-
+    background-color: #d4eeed;
 }
