--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,81 +1,11 @@
-<!--
-<div class="narrow-image">
-  <p>Welcome to our shop!</p>
-  <%= link_to(@carousel_products[0], { 'class' => 'thumbnail' }) do %>
-    <% image_tag 'widepurse01.jpg', :alt => 'Butterfly Handbag' %>
-  <% end %>
-  <%= link_to(@carousel_products[1], { 'class' => 'thumbnail' }) do %>
-    <% image_tag 'frontcushions.jpg', :alt => 'Butterfly Handbag' %>
-  <% end %>
-  <%= link_to(@carousel_products[1], { 'class' => 'thumbnail' }) do %>
-    <% image_tag 'fronttweed.jpg', :alt => 'Butterfly Handbag' %>
-  <% end %>
-</div>
--->
-
-<!--<div class="row">
-  <div class="span5">
-    <div class="hero-unit" id="shop-now-hero">
-      <h1>Online Store</h1>
-      <p>All products available to order online</p>
-      <p>
-        <a href="/products" class="btn btn-primary btn-large">
-          Shop Now
-        </a>
-      </p>
-    </div>
-  </div>-->
- <!-- <div class="span7">
-    <div id="home-carousel" class="hero-unit carousel slide">
-      <div class="carousel-inner">
-        <div class="active item">
-          <%= link_to @carousel_products[0] do %>
-            <% image_tag 'frontpagebags.jpg', :alt => 'Butterfly Handbag', :class => 'carousel-image' %>
-          <% end %>
-          <div class="carousel-caption">
-            <h4>Our Amazing Butterfly Handbag!</h4>
-            <p>Carry your belongings in style with this amazing butterfly patterned handbag</p>
-          </div>
-        </div>
-        <div class="item">
-          <%= link_to @carousel_products[1] do %>
-            <% image_tag 'frontcushionstack.jpg', :alt => 'Cushions', :class => 'carousel-image' %>
-          <% end %>
-          <div class="carousel-caption">
-            <h4>A Selection Of Our Scatter Cushions</h4>
-            <p>The perfect addition to any room</p>
-          </div>
-        </div>
-        <div class="item">
-          <%= link_to @carousel_products[2] do %>
-            <% image_tag 'frontpagetweed.jpg', :alt => 'Tweed Handbag', :class => 'carousel-image' %>
-          <% end %>
-          <div class="carousel-caption">
-            <h4>Our Gorgeous Raspberry Tweed Handbag</h4>
-            <p>The most fabulous handbag!</p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-    </div>
-  </div>
-</div>-->
-
-<div>
-	
-<!--	<body background="/assets/canvasbackground.jpg" id="background" class="backgroundpatterns"> -->
-	
-	</div>
-
 <div class="row">
   <div class="span8">
     <div class="hero-unit" id="butterfly-handbag-hero">
       <h1>Online Store</h1>
-      <h3>Carry your belongings in style</h3>
-        <a href="/products/6" class="btn btn-primary btn-large">
-         Shop Now!
-        </a>
+      <h3>Carry your belongings in style!</h3>
+      <a href="/products/6" class="btn btn-primary btn-large">
+        &nbsp;Shop Now&nbsp;
+      </a>
     </div>
   </div>
   <div class="span4">
@@ -97,20 +27,15 @@
     <% end %>
   </div>
   <div class="span4">
-    <%= link_to products_url do %>
-      <% image_tag 'eiffelipad2thumb.jpg', :alt => 'Butterfly Bag' %>
-    <% end %>
-  </div>
-</div>  
- 
-<div class="row">
-  <div class="span3 offset9">
     <form class="well">
       <p>Join our mailing list to hear about new products and special offers!</p>
       <input type="text" id="signup-email" placeholder="Enter your email address">
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
   </div>
+</div>  
+ 
+<div class="row">
 </div>
 
 <!--<div id="social">
