WIP before footer fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -24,7 +24,7 @@
 
 @linkColor: #a7c4bb;
 @bodyBackground: lighten(#FDFFE6, 2%);
-@baseFontFamily: 'Helvetica', cursive;
+@baseFontFamily: 'Quattrocento Sans', sans-serif;
 @headingsFontWeight: bold;
 @navbarBackground: @linkColor;
 @navbarBackgroundHighlight: @linkColor;
@@ -44,3 +44,15 @@
     background-color: @bodyBackground;
     background-image: none;
 }
+
+body {
+	background-image: url('/assets/paper_texture_bg.jpg');
+}
+
+.wrapper > .container, footer > .container {
+    padding: 0px 20px;
+    background-color: #EDF0E4;
+    border: solid #b7b7b7;
+    border-width: 0px 1px;
+}
+
