--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -12,8 +12,8 @@
     color: #3A4E4E;
 
     h1 {
-        font-family: 'Nixie One', cursive;
-        padding-bottom: 6px;
+        font-family: 'Quattrocento Sans', sans-serif;
+        padding-bottom: 17px;
     }
 
     h3 {
@@ -21,16 +21,11 @@
     }
 }
 
-#front-page-thumb1 {
+.homepage-product {
     background-color: #d4eeed;
-}
-
-#front-page-thumb2 {
-    background-color: #d4eeed;
-}
-
-#front-page-thumb3 {
-    background-color: #d4eeed;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
 }
 
 // fix signup form vertical alignment
