--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
   <% else %>
     <title>Brighton Belles - Cushions, Bags, Purses and Gadget Cases</title>
   <% end %>
-<link href='http://fonts.googleapis.com/css?family=Nixie+One|Bad+Script|Vast+Shadow|Josefin+Slab|Italianno|Montserrat|Mountains+of+Christmas:700' rel='stylesheet' type='text/css'>
-
+  <link href='http://fonts.googleapis.com/css?family=Questrial|Duru+Sans|Quattrocento+Sans|Spinnaker|Italianno' rel='stylesheet' type='text/css'>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -88,8 +87,6 @@
           </div>
         </div>
       </div>
-      
-      
 
       <%= yield %>
 
