--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,34 +3,34 @@
     <div class="hero-unit" id="butterfly-handbag-hero">
       <h1>Online Store</h1>
       <h3>Carry your belongings in style!</h3>
-      <a href="/products/6" class="btn btn-primary btn-large">
+      <a href="/products/14-butterfly-ipad-case" class="btn btn-primary btn-large">
         &nbsp;Shop Now&nbsp;
       </a>
     </div>
   </div>
-  <div class="span4">
+  <div class="span4 homepage-product">
     <%= link_to products_url do %>
-      <% image_tag '2butterflybag.jpg', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixel2butterflybag.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
 </div>
 
 <div class="row">
-  <div class="span4">
+  <div class="span4 homepage-product">
     <%= link_to products_url do %>
-      <% image_tag 'thumbtweedhandbag.jpg', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixeltweedhandbag.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
-  <div class="span4">
+  <div class="span4 homepage-product">
     <%= link_to products_url do %>
-      <% image_tag 'butterflypurse002thumb.jpg', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixelbutterflypurse002.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
   <div class="span4">
     <form class="well">
       <p>Join our mailing list to hear about new products and special offers!</p>
-      <input type="text" id="signup-email" placeholder="Enter your email address">
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+      <input type="text" id="signup-email" placeholder="Enter your email address" name="EMAIL">
+      <button type="submit" class="btn btn-primary" name="subscribe" value="Subscribe">Sign Up</button>
     </form>
   </div>
 </div>  
