--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -46,10 +46,10 @@
 }
 
 body {
-	background-image: url('/assets/paper_texture_bg.jpg');
+    background-image: url('/assets/paper_texture_bg.jpg');
 }
 
-.wrapper > .container, footer > .container {
+body > .container, footer > .container {
     padding: 0px 20px;
     background-color: #EDF0E4;
     border: solid #b7b7b7;
