--- a/app/assets/stylesheets/footer.css.less
+++ b/app/assets/stylesheets/footer.css.less
@@ -8,7 +8,7 @@ footer {
     	color: #333;
     }
 }
-.wrapper {
+body > .container {
     min-height: 100%;
     height: auto !important;
     height: 100%;
