--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -51,8 +51,8 @@ body {
 
 body > .container, footer > .container {
     padding: 0px 20px;
-    background-color: #EDF0E4;
-    border: solid #b7b7b7;
+    background-color: #f7f4e9;
+    border: solid #D1E2CB;
     border-width: 0px 1px;
 }
 
