Re-add social links.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,16 +33,15 @@
       <button type="submit" class="btn btn-primary" name="subscribe" value="Subscribe">Sign Up</button>
     </form>
   </div>
-</div>  
- 
-<div class="row">
-</div>
-
-<!--<div id="social">
-  <div id="facebook" data-likeurl="http://www.brightonbelles.com">
-    <a href="http://www.facebook.com/BrightonBelles">facebook.com/BrightonBelles</a>
+  <div class="row">
+    <div class="span4">
+      <div id="facebook" data-likeurl="http://www.brightonbelles.com">
+        <a href="http://www.facebook.com/BrightonBelles">facebook.com/BrightonBelles</a>
+      </div>
+      <a href="http://twitter.com/BellesBulletin" class="twitter-follow-button twitter-widget"
+         data-width="160px" data-show-count="false">Follow @BellesBulletin</a>
+      <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&amp;media=<%= u asset_url('triplecushionstackbackroung.jpg') %>&amp;description=Brighton%20Belles%20-%20Pretty%20Things!" class="pin-it-button" data-count-layout="horizontal">Pin It</a>
+    </div>
   </div>
-  <a href="http://twitter.com/BellesBulletin" class="twitter-follow-button twitter-widget"
-     data-width="160px" data-show-count="false">Follow @BellesBulletin</a>
-  <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&amp;media=<%= u asset_url('triplecushionstackbackroung.jpg') %>&amp;description=Brighton%20Belles%20-%20Pretty%20Things!" class="pin-it-button" data-count-layout="horizontal">Pin It</a>
-</div>-->
+</div>  
+
