Fix rendering of headers in Firefox (chosen font lacks bold).

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,6 +31,10 @@
 @navbarText: #fff;
 @navbarLinkColor: #fff;
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
+
 .navbar-search .search-query {
     width: 180px;
     border-color: #fff;
