Remove drop shadows (doesn't work in IE).

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,6 +31,10 @@
 @navbarText: #fff;
 @navbarLinkColor: #fff;
 
+a, button {
+    text-shadow: none !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
