--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,6 +44,10 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #fff;
 }
 
+.navbar a {
+    font-size: 16px;
+}
+
 .page_heading {
     color: @linkColor;
 }
