Finish off new front page and backgrounds.

--- a/app/assets/stylesheets/header.css.less
+++ b/app/assets/stylesheets/header.css.less
@@ -10,10 +10,16 @@
 
     h1 {
 	font-family: 'Italianno', cursive;
-        color: #688F8E;
+        color: #a7c4bb;
         font-size: 60px;
         padding-top: 30px;
         padding-left: 50px;
+        
+        a:hover {
+			text-decoration: none;
+			        color: #a7c4bb;
+
+        }
     }
 }
 
@@ -21,7 +27,7 @@
     #headerimage {
         background-image: url(/assets/pier1170.jpg);
         h1 {
-            font-size: 55px;
+            font-size: 60px;
             padding-top: 30px;
             padding-left: 50px;
         }
