--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -1,13 +1,15 @@
 #butterfly-handbag-hero {
-    background: url('/assets/ipadcase2thumb.png');
+    background: url('/assets/buttipad1thumb.png');
     background-repeat: no-repeat;
     background-color: #d4eeed;
     background-position: right; 
     color: #3A4E4E;
 
     h1 {
-        font-family: 'Quattrocento Sans', sans-serif;
+        font-family: 'Poiret One', cursive;
         padding-bottom: 17px;
+        
+        
     }
 
     h3 {
@@ -26,3 +28,4 @@
 input#signup-email {
     margin-bottom: 0px;
 }
+
