--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <% else %>
       <title>Brighton Belles - Cushions, Bags, Purses and Gadget Cases</title>
     <% end %>
-    <link href='http://fonts.googleapis.com/css?family=Questrial|Duru+Sans|Quattrocento+Sans|Spinnaker|Italianno' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans|Poiret+One|Italianno' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
@@ -26,8 +26,9 @@
      <div id="fb-root"></div>
 
      <div class="container">
-       <div id="headerimage"><h1>Brighton Belles</h1></div>
-
+       <div id="headerimage"> <h1><a href="/">Brighton Belles</a></h1> </div>
+        
+		
        <div class="navbar">
          <div class="navbar-inner">
            <div class="container">
