--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="span4 homepage-product">
-    <%= link_to products_url do %>
+    <%= link_to '/products/6-butterfly-bag' do %>
       <% image_tag 'pixel2butterflybag.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
@@ -17,12 +17,12 @@
 
 <div class="row">
   <div class="span4 homepage-product">
-    <%= link_to products_url do %>
+    <%= link_to '/products/5-tweed-bag' do %>
       <% image_tag 'pixeltweedhandbag.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
   <div class="span4 homepage-product">
-    <%= link_to products_url do %>
+    <%= link_to '/products/3-butterfly-purse' do %>
       <% image_tag 'pixelbutterflypurse002.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
