--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,8 @@
                       <li><%= link_to 'Commissions', '/pages/commissions' %></li> -->
                  <li><%= link_to 'Buying & Delivery', '/pages/buying' %></li>
                  <li><%= link_to 'Blog',  'http://blog.brightonbelles.com/'%></li>
-                 <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Our Etsy Shop</b></a></li>
+                 <li><a onClick="_gaq.push(['_trackEvent', 'Outbound Links', 'Menu Bar Click', 'etsy.com/shop/BrightonBellesGifts']);" 
+                        href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Our Etsy Shop</b></a></li>
                </ul>
 
                <form class="navbar-search pull-right" action="/search" method="get">
