Fix mailchimp signup form.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,9 +27,9 @@
     <% end %>
   </div>
   <div class="span4">
-    <form class="well">
+    <form action="http://brightonbelles.us5.list-manage1.com/subscribe/post?u=fb39e67b343ebae6f347d266d&amp;id=e066e7fbb5" method="post" class="well" target="_blank" novalidate>
       <p>Join our mailing list to hear about new products and special offers!</p>
-      <input type="text" id="signup-email" placeholder="Enter your email address" name="EMAIL">
+      <input type="email" id="signup-email" placeholder="Enter your email address" name="EMAIL" required>
       <button type="submit" class="btn btn-primary" name="subscribe" value="Subscribe">Sign Up</button>
     </form>
   </div>
