Resize front page images.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="span4 homepage-product">
     <%= link_to '/products/6-butterfly-bag' do %>
-      <% image_tag 'pixel2butterflybag.png', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixel2butterflybag-small.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
 </div>
@@ -18,12 +18,12 @@
 <div class="row">
   <div class="span4 homepage-product">
     <%= link_to '/products/5-tweed-bag' do %>
-      <% image_tag 'pixeltweedhandbag.png', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixeltweedhandbag-small.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
   <div class="span4 homepage-product">
     <%= link_to '/products/3-butterfly-purse' do %>
-      <% image_tag 'pixelbutterflypurse002.png', :alt => 'Butterfly Bag' %>
+      <% image_tag 'pixelbutterflypurse002-small.png', :alt => 'Butterfly Bag' %>
     <% end %>
   </div>
   <div class="span4">
